[gd_scene load_steps=27 format=2]

[ext_resource path="res://src/Levels/Gateway/boss_capsule.png" type="Texture" id=1]
[ext_resource path="res://src/Levels/Gateway/boss_capsule_glass.png" type="Texture" id=2]
[ext_resource path="res://src/Levels/Gateway/boss_capsule_barrier.png" type="Texture" id=3]
[ext_resource path="res://src/Levels/Gateway/boss_capsule_floor.png" type="Texture" id=4]
[ext_resource path="res://src/Levels/Gateway/boss_capsule_anim.png" type="Texture" id=5]
[ext_resource path="res://src/Levels/Gateway/BossCapsule.gd" type="Script" id=6]
[ext_resource path="res://src/Effects/Materials/RemainsMat.tres" type="Material" id=7]
[ext_resource path="res://src/Sounds/Ice Break.wav" type="AudioStream" id=8]
[ext_resource path="res://src/Effects/Materials/shard_particles.tres" type="Material" id=9]
[ext_resource path="res://src/Effects/Textures/remains_glass2.png" type="Texture" id=10]
[ext_resource path="res://src/Effects/Textures/elec_particles.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 0, 96, 64, 96 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 64, 96, 64, 96 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 128, 96, 64, 96 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), null, null, SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 32.0
} ]

[sub_resource type="CanvasItemMaterial" id=29]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 3
particles_anim_loop = false

[sub_resource type="Gradient" id=30]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=28]
gradient = SubResource( 30 )

[sub_resource type="ParticlesMaterial" id=31]
emission_shape = 2
emission_box_extents = Vector3( 16, 16, 1 )
flag_disable_z = true
gravity = Vector3( 0, -100, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 28 )
anim_speed = 1.0
anim_offset = 0.4

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23, 11 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 11 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18, 31.5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 34, 25 )

[node name="BossCapsule" type="Node2D"]
script = ExtResource( 6 )

[node name="floor" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="active" type="AnimatedSprite" parent="."]
pause_mode = 2
frames = SubResource( 10 )
frame = 6
playing = true

[node name="particles2D" type="Particles2D" parent="active"]
self_modulate = Color( 1, 1, 1, 0.529412 )
material = SubResource( 29 )
amount = 9
lifetime = 0.5
local_coords = false
process_material = SubResource( 31 )
texture = ExtResource( 11 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="glass" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="barrier" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="remains_particles" type="Particles2D" parent="."]
pause_mode = 2
material = ExtResource( 7 )
z_index = 2
emitting = false
amount = 12
lifetime = 2.0
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -394.584, -119.96, 807.912, 1377.38 )
process_material = ExtResource( 9 )
texture = ExtResource( 10 )

[node name="staticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="collisionShape2D" type="CollisionShape2D" parent="staticBody2D"]
position = Vector2( 0, 36 )
shape = SubResource( 2 )

[node name="collisionShape2D2" type="CollisionShape2D" parent="staticBody2D"]
position = Vector2( 0, -33 )
shape = SubResource( 1 )

[node name="closed" type="CollisionShape2D" parent="staticBody2D"]
position = Vector2( 0, -6.5 )
shape = SubResource( 3 )
disabled = true

[node name="projectile_detector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="collisionShape2D" type="CollisionShape2D" parent="projectile_detector"]
shape = SubResource( 11 )

[node name="icebreak" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 8 )
volume_db = -20.0
pitch_scale = 0.77
max_distance = 800.0
bus = "SFX"

[connection signal="body_entered" from="projectile_detector" to="." method="_on_projectile_entered"]
